# web

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  http-server.c  main.c  resource.c  route.c  server.c  template.c  web.c
.github/workflows/: cmake.yml
cmake/: web-config.cmake
html/: generator example.html  index.html
html/about/: index.html
html/help/: index.html
include/http-server/: http-server.h
include/web/: resource.h  route.h  server.h  template.h  web.h
jsonschema/: resource.json  route-example.json  route.json  server.json
